# Assignment-1

./: main.py  pyproject.toml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
